--- a/index.html
+++ b/index.html
@@ -952,10 +952,12 @@
                         <ul class="sub-menu">
                             <li id="menu-item-19222"
                                 class="menu-item menu-item-type-post_type_archive menu-item-object-topics menu-item-19222">
-                                <a href="https://japanview.tv/id/topics/">Articles</a></li>
+                                <a href="https://japanview.tv/id/topics/">Articles</a>
+                            </li>
                             <li id="menu-item-19667"
                                 class="menu-item menu-item-type-post_type_archive menu-item-object-column menu-item-19667">
-                                <a href="https://japanview.tv/id/column/">Community Corner</a></li>
+                                <a href="https://japanview.tv/id/column/">Community Corner</a>
+                            </li>
                             <li id="menu-item-19304"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-19304"><a
                                     href="https://japanview.tv/videos/">Videos</a></li>
@@ -967,18 +969,22 @@
                         <ul class="sub-menu">
                             <li id="menu-item-19225"
                                 class="menu-item menu-item-type-taxonomy menu-item-object-school_type menu-item-19225">
-                                <a href="https://japanview.tv/id/school_type/junior_college_id/">Junior College</a></li>
+                                <a href="https://japanview.tv/id/school_type/junior_college_id/">Junior College</a>
+                            </li>
                             <li id="menu-item-19226"
                                 class="menu-item menu-item-type-taxonomy menu-item-object-school_type menu-item-19226">
                                 <a href="https://japanview.tv/id/school_type/vocational_school_id/">Vocational
-                                    School</a></li>
+                                    School</a>
+                            </li>
                             <li id="menu-item-19227"
                                 class="menu-item menu-item-type-taxonomy menu-item-object-school_type menu-item-19227">
-                                <a href="https://japanview.tv/id/school_type/university_id/">University</a></li>
+                                <a href="https://japanview.tv/id/school_type/university_id/">University</a>
+                            </li>
                             <li id="menu-item-19252"
                                 class="menu-item menu-item-type-taxonomy menu-item-object-school_type menu-item-19252">
                                 <a href="https://japanview.tv/id/school_type/japanese_language_school_id/">Japanese
-                                    Language School</a></li>
+                                    Language School</a>
+                            </li>
                         </ul>
                     </li>
                     <li id="menu-item-19228"
@@ -987,16 +993,20 @@
                         <ul class="sub-menu">
                             <li id="menu-item-19229"
                                 class="menu-item menu-item-type-taxonomy menu-item-object-facility_genre menu-item-19229">
-                                <a href="https://japanview.tv/id/facility_genre/museum_id/">Museum</a></li>
+                                <a href="https://japanview.tv/id/facility_genre/museum_id/">Museum</a>
+                            </li>
                             <li id="menu-item-19230"
                                 class="menu-item menu-item-type-taxonomy menu-item-object-facility_genre menu-item-19230">
-                                <a href="https://japanview.tv/id/facility_genre/zoo_id/">Zoo</a></li>
+                                <a href="https://japanview.tv/id/facility_genre/zoo_id/">Zoo</a>
+                            </li>
                             <li id="menu-item-19231"
                                 class="menu-item menu-item-type-taxonomy menu-item-object-facility_genre menu-item-19231">
-                                <a href="https://japanview.tv/id/facility_genre/aquarium_id/">Aquarium</a></li>
+                                <a href="https://japanview.tv/id/facility_genre/aquarium_id/">Aquarium</a>
+                            </li>
                             <li id="menu-item-19232"
                                 class="menu-item menu-item-type-taxonomy menu-item-object-facility_genre menu-item-19232">
-                                <a href="https://japanview.tv/id/facility_genre/art_museum_id/">Art Museum</a></li>
+                                <a href="https://japanview.tv/id/facility_genre/art_museum_id/">Art Museum</a>
+                            </li>
                         </ul>
                     </li>
                     <li id="menu-item-19233"
@@ -1060,6 +1070,9 @@
                             <li id="menu-item-19251"
                                 class="menu-item menu-item-type-custom menu-item-object-custom menu-item-19251"><a
                                     href="/id/privacy_policy_id/">Privacy Policy</a></li>
+                            <li id="menu-item-19252"
+                                class="menu-item menu-item-type-custom menu-item-object-custom menu-item-19252"><a
+                                    href="/contact/">Advertisement and Information Posting</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -1079,13 +1092,20 @@
             centeredSlides: true,
             loopedSlides: 5,
             slidesPerView: 1,
+            spaceBetween: 0,
             autoplay: {
-                delay: 3000,
+                delay: 30000,
             },
         });
         var swiper = new Swiper('.mySwiper2', {
             // Optional parameters
             loop: true,
+            centeredSlides: true,
+            loopedSlides: 4,
+            slidesPerView: 1,
+            autoplay: {
+                delay: 3000,
+            },
 
             // If we need pagination
             pagination: {
