--- a/index.html
+++ b/index.html
@@ -1090,11 +1090,11 @@
         var swiper = new Swiper(".mySwiper1", {
             loop: true,
             centeredSlides: true,
-            loopedSlides: 5,
-            slidesPerView: 1,
-            spaceBetween: 0,
+            loopedSlides: 4,
+            slidesPerView: 'auto',
+            spaceBetween: 70,
             autoplay: {
-                delay: 30000,
+                delay: 1000,
             },
         });
         var swiper = new Swiper('.mySwiper2', {
@@ -1103,6 +1103,7 @@
             centeredSlides: true,
             loopedSlides: 4,
             slidesPerView: 1,
+            spaceBetween: 70,
             autoplay: {
                 delay: 3000,
             },
