--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Japan View</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
 
 <body>
@@ -932,6 +933,15 @@
                 <!-- //KEYWORDS -->
             </div>
         </div>
+                <!-- MEDIA BUTTON -->
+    <div class="wrapper">
+        <div class="icon instagram">
+           <div class="tooltip">
+              Instagram
+           </div>
+           <span><i class="fab fa-instagram-f"></i></span>
+        </div>
+    </div>
     </div>
     <footer class="jv-footer">
         <!-- <div class="jv-footer-bg"></div> -->
@@ -1081,7 +1091,8 @@
         </div>
         <div class="jv-footer-copy"><span>Copyright © Ozora Publishing Company Co.Ltd All Rights Reserved.</span></div>
     </footer>
-    </div>
+
+    
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
@@ -1104,9 +1115,6 @@
             loopedSlides: 4,
             slidesPerView: 1,
             spaceBetween: 70,
-            autoplay: {
-                delay: 3000,
-            },
 
             // If we need pagination
             pagination: {
