--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Japan View</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
 
 <body>
@@ -933,15 +933,21 @@
                 <!-- //KEYWORDS -->
             </div>
         </div>
-                <!-- MEDIA BUTTON -->
-    <div class="wrapper">
-        <div class="icon instagram">
-           <div class="tooltip">
-              Instagram
-           </div>
-           <span><i class="fab fa-instagram-f"></i></span>
+        <!-- MEDIA BUTTON -->
+        <div class="media-button">
+            <div class="icon instagram">
+                <div class="tooltip">
+                    Instagram
+                </div>
+                <span><i class="fab fa-instagram"></i></span>
+            </div>
+            <div class="icon language">
+                <div class="tooltip">
+                    Language
+                </div>
+                <span><a class="fab fa-language">ID</a></span>
+            </div>
         </div>
-    </div>
     </div>
     <footer class="jv-footer">
         <!-- <div class="jv-footer-bg"></div> -->
@@ -1092,7 +1098,7 @@
         <div class="jv-footer-copy"><span>Copyright © Ozora Publishing Company Co.Ltd All Rights Reserved.</span></div>
     </footer>
 
-    
+
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
