--- a/index.html
+++ b/index.html
@@ -935,11 +935,12 @@
         </div>
         <!-- MEDIA BUTTON -->
         <div class="media-button">
-            <div class="icon instagram">
+            <div class="icon instagram"> 
                 <div class="tooltip">
                     Instagram
                 </div>
-                <span><i class="fab fa-instagram"></i></span>
+                <a href="https://www.instagram.com/japanview_ozora/">
+                <span><i class="fab fa-instagram"></i></span></a>
             </div>
             <div class="icon language">
                 <div class="tooltip">
