--- a/pokemon-news/index.html
+++ b/pokemon-news/index.html
@@ -16,7 +16,7 @@
         <div id="nav">
             <div class="nav-container1">
                 <div class="nav-logo">
-                    <img src="../img/japanview-logo.png" alt=""></img>
+                    <a href="../index.html"><img src="../img/japanview-logo.png" alt=""></a>
                     <a>Study & Experience in JAPAN</a>
                 </div>
                 <div class="search-bar">
@@ -26,7 +26,7 @@
             <div class="menu-list">
                 <nav aria-label="main navigation">
                     <ul class="menus">
-                        <li><a href="#">NEWS</a></li>
+                        <li><a href="../news/index.html">NEWS</a></li>
                         <a><b>|</b></a>
                         <li>
                             <button type="button" aria-haspopup="true" aria-expanded="true" aria-controls="dropdown1">
